# swagger_server/controllers/contenu_de_cours_controller.py
@@ -4,43 +4,45 @@ import six
 from swagger_server import util
 
 
-def cours_id_dossier_delete(id, dossier):  # noqa: E501
+def cours_id_dossier_delete(id, chemin):  # noqa: E501
     """Supprime un dossier du cours
 
      # noqa: E501
 
     :param id: 
     :type id: int
-    :param dossier: 
-    :type dossier: str
+    :param chemin: 
+    :type chemin: str
 
     :rtype: None
     """
     return 'do some magic!'
 
 
-def cours_id_dossier_get(id, dossier):  # noqa: E501
+def cours_id_dossier_get(id, chemin):  # noqa: E501
     """Retourne un JSON du contenu du dossier
 
      # noqa: E501
 
     :param id: 
     :type id: int
-    :param dossier: 
-    :type dossier: str
+    :param chemin: 
+    :type chemin: str
 
     :rtype: None
     """
     return 'do some magic!'
 
 
-def cours_id_dossier_post(id):  # noqa: E501
+def cours_id_dossier_post(id, chemin):  # noqa: E501
     """Crée un nouveau dossier pour le cours
 
      # noqa: E501
 
     :param id: 
     :type id: int
+    :param chemin: 
+    :type chemin: str
 
     :rtype: None
     """
@@ -77,13 +79,15 @@ def cours_id_fichier_get(id, chemin):  # noqa: E501
     return 'do some magic!'
 
 
-def cours_id_fichier_post(id):  # noqa: E501
+def cours_id_fichier_post(id, chemin):  # noqa: E501
     """Télécharge un fichier pour le cours
 
      # noqa: E501
 
     :param id: 
     :type id: int
+    :param chemin: 
+    :type chemin: str
 
     :rtype: None
     """
