# swagger_server/controllers/seances_controller.py
@@ -17,13 +17,15 @@ def cours_id_seances_get(id):  # noqa: E501
     return 'do some magic!'
 
 
-def cours_id_seances_id_seance_delete(id):  # noqa: E501
+def cours_id_seances_id_seance_delete(id, idSeance):  # noqa: E501
     """Supprime une séance
 
      # noqa: E501
 
     :param id: 
     :type id: int
+    :param idSeance: 
+    :type idSeance: int
 
     :rtype: None
     """
@@ -45,13 +47,15 @@ def cours_id_seances_id_seance_get(id, idSeance):  # noqa: E501
     return 'do some magic!'
 
 
-def cours_id_seances_id_seance_post(id):  # noqa: E501
+def cours_id_seances_id_seance_post(id, idSeance):  # noqa: E501
     """Crée une nouvelle séance
 
      # noqa: E501
 
     :param id: 
     :type id: int
+    :param idSeance: 
+    :type idSeance: int
 
     :rtype: None
     """
